Added cover image to metadata

--- a/assets/index.html
+++ b/assets/index.html
@@ -23,10 +23,10 @@ X		<!--
 		<meta property="og:url" content="https://calebjolliffe.co">
 		<meta property="og:title" content="Caleb Jolliffe">
 		<meta property="og:description" content="An independent designer building ridiculously simple workflows and websites.">
-X		<meta property="og:image" content="/assets/path">
+		<meta property="og:image" content="/assets/images/index.png">
 
 		<meta name="twitter:card" content="summary_large_image">
-X		<meta name="twitter:image" content="/assets/path">
+		<meta name="twitter:image" content="/assets/images/index.png">
 		<meta name="twitter:site" content="@calebjolliffe">
 
 		<meta name="twitter:creator" content="@calebjolliffe">
