Fixing index location again

--- a/index.html
+++ b/index.html
@@ -9,33 +9,48 @@
 		<link rel="icon" href="/assets/clbrrn.ico" sizes="32x32">
 		<link rel="icon" href="/assets/clbrrn.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="/assets/style.css" type="text/css">
-X		<!-- RSS FEED WILL GO HERE -->
-X		<!--
+		<!-- RSS FEED WILL GO HERE -->
+		<!--
 		<link rel="alternate" href="/assets/feed.xml" type="application/atom+xml" title="Caleb Jolliffe">
 		<link rel="alternate" href="/assets/feed.json" type="application/feed+json" title="Caleb Jolliffe">
 		-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-X		<meta name="description" content="An independent designer.">
+		<meta name="description" content="An independent designer building ridiculously simple workflows and websites.">
 		<meta name="author" content="Caleb Jolliffe">
 
 		<meta property="og:site_name" content="Caleb Jolliffe">
 		<meta property="og:url" content="https://calebjolliffe.co">
 		<meta property="og:title" content="Caleb Jolliffe">
-X		<meta property="og:description" content="">
-X		<meta property="og:image" content="/assets/path">
+		<meta property="og:description" content="An independent designer building ridiculously simple workflows and websites.">
+		<meta property="og:image" content="/assets/images/index.png">
 
 		<meta name="twitter:card" content="summary_large_image">
-X		<meta name="twitter:image" content="/assets/path">
+		<meta name="twitter:image" content="/assets/images/index.png">
 		<meta name="twitter:site" content="@calebjolliffe">
 
 		<meta name="twitter:creator" content="@calebjolliffe">
 		<meta name="twitter:title" content="Caleb Jolliffe">
-X		<meta name="twitter:description" content="An independent designer.">
+		<meta name="twitter:description" content="An independent designer building ridiculously simple workflows and websites.">
 
 	</head>
 
 	<body>
+
+		<h1><a href="https://beta.calebjolliffe.co">Caleb Jolliffe</a></h1>
+
+		<h2>Writing</h2>
+
+		<ul>
+			<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/disrespect-yourself-disrespect-everyone/">Disrespect yourself, disrespect everyone</a></li>
+			<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/app-as-vehicle/">App as Vehicle</a></li>
+		</ul>
+
+		<h2>Recent</h2>
+
+		<ul>
+			<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">Design to Learn &emsp;&mdash;&emsp; NUBBB</a></li>
+		</ul>
 
 	</body>
 
