--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 		<link rel="icon" href="/assets/clbrrn.ico" sizes="32x32">
 		<link rel="icon" href="/assets/clbrrn.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="/assets/style.css" type="text/css">
-		<!-- RSS FEED WILL GO HERE -->
-		<!--
 		<link rel="alternate" href="/assets/feed.xml" type="application/atom+xml" title="Caleb Jolliffe">
 		<link rel="alternate" href="/assets/feed.json" type="application/feed+json" title="Caleb Jolliffe">
-		-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="An independent designer building ridiculously simple workflows and websites.">
@@ -47,6 +44,13 @@
 		</ul>
 
 		<h2>Recent</h2>
+
+		<ul>
+			<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/">Project</a></li>
+			<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/">Project</a></li>
+		</ul>
+
+		<h2>Elsewhere</h2>
 
 		<ul>
 			<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">Design to Learn &emsp;&mdash;&emsp; NUBBB</a></li>
