--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<h2>Elsewhere</h2>
 
 		<ul>
-			<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">Design to Learn &emsp;&mdash;&emsp; NUBBB</a></li>
+			<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">Design to Learn &mdash; NUBBB</a></li>
 		</ul>
 
 	</body>
