--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Caleb Jolliffe</title>
 
 		<link rel="canonical" href="https://calebjolliffe.co">
-		<link rel="icon" href="/assets/clbrrn.ico" sizes="32x32">
-		<link rel="icon" href="/assets/clbrrn.svg" type="image/svg+xml">
+		<link rel="icon" href="/assets/images/clbrrn.ico" sizes="32x32">
+		<link rel="icon" href="/assets/images/clbrrn.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="/assets/style.css" type="text/css">
 		<link rel="alternate" href="/assets/feed.xml" type="application/atom+xml" title="Caleb Jolliffe">
 		<link rel="alternate" href="/assets/feed.json" type="application/feed+json" title="Caleb Jolliffe">
@@ -25,7 +25,6 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:image" content="/assets/images/index.png">
 		<meta name="twitter:site" content="@calebjolliffe">
-
 		<meta name="twitter:creator" content="@calebjolliffe">
 		<meta name="twitter:title" content="Caleb Jolliffe">
 		<meta name="twitter:description" content="An independent designer building ridiculously simple workflows and websites.">
