--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Caleb Jolliffe
 
 <ul>
 	{% for posts in site.post %}
-		<li><span>{{ post.stamp }}</span>&emsp;<a href="{{ post.permalink }}">{{ post.title }}</a></li>
+		<li><span>{{ post.stamp }}</span>&emsp;<a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
 
