Corrected path typo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Caleb Jolliffe
 <h2>Writing</h2>
 
 <ul>
-	{% for posts in site.post %}
+	{% for posts in site.posts %}
 		<li><span>{{ post.stamp }}</span>&emsp;<a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
