--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ title: Caleb Jolliffe
 <h2>Elsewhere</h2>
 
 <ul>
-	<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">Design to Learn &mdash; NUBBB</a></li>
+	<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">NUBBB, Design to Learn</a></li>
 </ul>
