--- a/index.html
+++ b/index.html
@@ -3,23 +3,48 @@ layout: default
 title: Caleb Jolliffe
 ---
 
-<h2>Writing</h2>
+<r-cell span=2+1 class="section">
+	<h2>Writing<hr></h2>
+</r-cell>
 
-<ul>
-	{% for post in site.posts %}
-		<li><span>{{ post.stamp }}</span>&emsp;<a href="{{ post.url }}">{{ post.title }}</a></li>
-	{% endfor %}
-</ul>
+{% for post in site.posts %}
+	<r-cell span=2+1 class="list">
+		<a href="{{ post.url }}">
+			<span>{{ post.title }}</span>
+			<span style="float:right;">{{ post.stamp }}</span>
+		</a>
+	</r-cell>
+{% endfor %}
 
-<h2>Recent</h2>
+<r-cell span=2+1 class="section">
+	<h2>Projects<hr></h2>
+</r-cell>
 
-<ul>
-	<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/">Project</a></li>
-	<li><span>01 · 24</span>&emsp;<a href="https://beta.calebjolliffe.co/">Project</a></li>
-</ul>
+<r-cell span=2+1 class="list">
+	<a href="" target="_blank">
+		<span>ddsmpl</span>
+		<span style="float:right;">2024</span>
+	</a>
+</r-cell>
 
-<h2>Elsewhere</h2>
+<r-cell span=2+1 class="section">
+	<h2>More<hr></h2>
+</r-cell>
 
-<ul>
-	<li><span>05 · 21</span>&emsp;<a href="https://beta.calebjolliffe.co/nubbb/">NUBBB, Design to Learn</a></li>
-</ul>
+<r-grid columns=2>
+
+	<r-cell span=1 class="list">
+		<ul>
+			<li>Page</li>
+			<li>Page</li>
+		</ul>
+	</r-cell>
+
+	<r-cell span=1 class="list">
+		<ul>
+			<li>Page</li>
+			<li>Page</li>
+		</ul>
+	</r-cell>
+
+</r-grid>
