--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@ layout: default
 title: Caleb Jolliffe
 ---
 
-{% for post in site.posts %}
-<li>
-	<a href="{{ post.url }}">
-		<span>{{ post.title }}</span>
-		<span style="float:right;">{{ post.stamp }}</span>
-	</a>
-</li>
-{% endfor %}
+<r-cell span=2+1 class="section">
+	<h2>Writing<hr></h2>
+</r-cell>
+
+<r-cell span=2+1 class="list">
+	<ul>
+		{% for post in site.posts %}
+		<li>
+			<a href="{{ post.url }}">
+				<span>{{ post.title }}</span>
+				<span style="float:right;">{{ post.stamp }}</span>
+			</a>
+		</li>
+		{% endfor %}
+	</ul>
+</r-cell>
+
+<r-cell span=2+1 class="section">
+	<h2>Projects<hr></h2>
+</r-cell>
+
+<r-cell span=2+1 class="list">
+	<ul>
+		<li>
+			<a href="" target="_blank">
+				<span>ddsmpl</span>
+				<span style="float:right;">2024</span>
+			</a>
+		</li>
+
+		<li>
+			<a href="" target="_blank">
+				<span>Atomic</span>
+				<span style="float:right;">2024</span>
+			</a>
+		</li>
+	</ul>
+</r-cell>
+
+<r-cell span=2+1 class="section">
+	<h2>More<hr></h2>
+</r-cell>
