--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Caleb Jolliffe
 ---
 
+<r-cell span=2+1>
+	<p>An independent designer. I enjoy building ridiculously simple tools for the Internet.</p>
+</r-cell>
+
 <r-cell span=2+1 class="section">
 	<h2>Writing<hr></h2>
 </r-cell>
