Changed test post URL

--- a/_posts/2024-02-29.html
+++ b/_posts/2024-02-29.html
@@ -3,7 +3,7 @@ layout: post
 title: Email, Minimized
 author: Caleb Jolliffe
 stamp: 02 · 24
-permalink: /email/
+permalink: /test/
 imagecard: email.png
 handle: calebjolliffe
 xdesc: Email is one of the greatest sources of anxiety in my daily work. For years, I assumed my anxiety stemmed from "too many emails". It doesn't. The typical email client UI is visually chaotic at best—I was avoiding the UI, not the emails. Could I change that?
