--- a/index.html
+++ b/index.html
@@ -49,3 +49,24 @@ title: Caleb Jolliffe
 <r-cell span=2+1 class="section">
 	<h2>More<hr></h2>
 </r-cell>
+
+<r-cell span=2+1 class="list">
+	<r-grid columns=2>
+		<r-cell span=1 class="list">
+			<ul>
+				<li><a href="/now">Now</a></li>
+				<li><a href="">Thing</a></li>
+				<li><a href="">Thing</a></li>
+				<li><a href="">Thing</a></li>
+			</ul>
+		</r-cell>
+		<r-cell span=1 class="list">
+			<ul>
+				<li><a href="">Thing</a></li>
+				<li><a href="">Thing</a></li>
+				<li><a href="">Thing</a></li>
+				<li><a href="">Thing</a></li>
+			</ul>
+		</r-cell>
+	</r-grid>
+</r-cell>
